# plxsversion

./: .gitignore  Cargo.toml  LICENSE  build.rs  custom_namespace.diff  plxsversion.cmake  plxsversionConfig.cmake.in  pyproject.toml  readme.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
src/: lib.rs
src/tests/: test_formatter.py  test_getter.py  test_main.py  test_utils.py  test_version_collector.py  test_version_data.py  test_version_info.py  utils.py
src/version_builder/: __main__.py  formatter.py  getter.py  main.py  utils.py  version_collector.py  version_data.py  version_info.py
tests/cmake/: CMakeLists.txt
tests/cmake/01-lang-c/: CMakeLists.txt  main.c
tests/cmake/02-lang-cpp11/: CMakeLists.txt
tests/cmake/03-lang-cpp17/: CMakeLists.txt  main.cpp
tests/cmake/04-source-file/: CMakeLists.txt
tests/cmake/05-target-suffix/: CMakeLists.txt
tests/cmake/06-print-option/: CMakeLists.txt
tests/cmake/07-full-options/: CMakeLists.txt  main.cpp
